--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,8 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         Projects
                          </a>
                  </h3>
             </div>
