Change quote font

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -27,9 +27,9 @@ $danger				 : #C64537;
 $info		         : #308cbc;
 
 //fonts
-$font1               : Microsoft Yahei, STHeiti Light, Fira Sans, sans-serif;
+$font1               : Microsoft Yahei, STHeiti Light, Fira Sans, Arial;
 $font2               : Inconsolata;
-$alt-font            : serif;
+$alt-font            : sans-serif;
 $doc-font-size       : 14;
 $doc-line-height     : 26;
 
