[About] Change path to about.me

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
+                         <a class="btn zoombtn" href="https://about.me/walter_wan">
                          About
                          </a>
                  </h3>
