Taobao link in navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -71,6 +71,9 @@
                     {% if site.codepen %}<li>
                         <a href="http://codepen.io/{{ site.codepen }}" target="_blank"><i class="fa fa-fw fa-codepen"></i> Codepen</a>
                     </li>{% endif %}
+					{% if site.taobao %}<li>
+						<a href="https://shop122691004.taobao.com" target="_blank"><i class="fa fa-shopping-cart"></i> Taobao</a>
+					</li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
